--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
                     <div class="contact-info">
                         <h1>Address</h1>
-                        <h2>2-4 constant spring road, kingston</h2>
+                        <h2>14B CAMPROAD SOUTH KINGSTON</h2>
                     </div>
                 </div>
             </div>
