--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="about container">
           <div class="col-left">
               <div class="about-img">
-                  <img src="https://i.ibb.co/N2cg01P/file-7414.jpg" alt="img">
+                  <img src="https://media-hosting.imagekit.io//eae0b1424390412c/IMG_7703.png?Expires=1832278721&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=UIGc6pBOrSr7ZmDJFASFJx2n-BXjB2TsGo8ddEndz-PwmdhbWYpkPjXMJfsswHb8XR1W4Uz6bcoP3sV8GpSFTRUMd5KQlkqAENAwZ2E7lek-3brht2igyFZC31YXjnmB-PIMeTCpzLnInxpm4YbVCEc~2YMGN7ERwlIRCvhs6kORj3kZ~~IHvzaSnsVNUQsk3InUfMUn39uE7P7NBcD5o2JYOwc7BlpotaW3FmzIz37Dhv7-p89LPB4C9h1CdIc~glOciPjUeRY7bkV0sDHh8JjjlKiyqd6074BAIjFr0fJ2Z18-GZOyzQH2RRow1B0QQQeAK-tH-Zl8Hkdu2DSZQA__" alt="img">
               </div>
           </div>
           <div class="col-right">
@@ -87,7 +87,7 @@
       <div class="vehicle-gallery">
         <div class="vehicle-card">
           <div class="vehicle-img">
-            <img src="https://i.ibb.co/FB5dC2Y/file-7411.jpg" alt="2018 Toyota Corolla">
+            <img src="https://media-hosting.imagekit.io//dc4721c62b6a4e8d/IMG_7579.jpeg?Expires=1832278721&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=YoW-4pTGEw7RfvMk42Y5VBIQIlz3hU3KVFZvfg9xv7uxVAqiBOZOT3wT00CXOtAVv1NijCDiJ7elsK0Pive3Jq05tZYQ78OPH1xWrtLRD5n5UQQuobRyNJJnth3kQTLtUX8eKxr~SOtXakKBuz2iKCXMt3mBPAjSzSY5b8liKmOzJEFlLpt97ATVFnkWqAe~LkagfpYrUbiKEMDmdxx8x8Kr9KLTfMQqz96hzLPT4IgC3hGFqUpwbysCK5XTOz7CQ2nuCDi1-7eP86Sd3FA1Nz9AG3D7y1G7Qn~EHY5B4mjTOLNchZrzQPFcNIjEwKhImGHB4xqJ~MDaxCBRIFubnQ__" alt="2018 Toyota Corolla">
           </div>
           <div class="vehicle-info">
             <h2>2015 Toyota MarkX</h2>
