--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
         </div>
         <div class="vehicle-card">
           <div class="vehicle-img">
-            <img src="https://i.ibb.co/wNB111Q/file-7416.jpg" alt="2020 Nissan Altima">
+            <img src="https://media-hosting.imagekit.io//fdb9ea8c6b274403/IMG_7627.jpeg?Expires=1832278721&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=ouA1u3IQzN-lsmHpuAWkGyndvI8LiQWGxaJTCZ3COeCYQN8CS0oYlBCaW--ZuchyElYyXDRbOxIwOPD5cemyGlFVarO3g4E5MNMe0vhsDXyvB6MqGuVHkaqnC8EH2xVtbku0ghTCmsIxnnwFHHAqcm3VYIemuk9soXVaeZEivCne~x3fUYw1d8-XzmbKfKx4LXBOqPETUBFKnfdck1Xu0z1xOUjeGhrQjciPLDKm-g2rGoy-eXcHGe2B029mDJEoAWnAUA9Y4m1l6TIKYAX0pkPEVf5lKYFlpjtGLI4FGhru7-gPqc1f6RNuyC7QDqJit6JLe6Dt8kI6blI8wPOKzw__" alt="2020 Nissan Altima">
           </div>
           <div class="vehicle-info">
-            <h2>2014 Toyota MarkX</h2>
-            <p class="price">Price: JMD 600,000</p>
-            <p class="year">Year: 2020</p>
+            <h2>2003 honda civic</h2>
+            <p class="price">Price: JMD 300,000</p>
+            <p class="year">Year: 2003</p>
             <p class="description">A sleek and comfortable sedan, with advanced tech features for a smooth driving experience.</p>
             <span class="status sold">sold</span> <!-- Add 'sold' class if sold -->
           </div>
