--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <div class="vehicle-card">
           <div class="vehicle-img">
-            <img src="https://i.ibb.co/LR4pbKJ/file-7412.jpg" alt="2019 Honda Civic">
+            <img src="https://media-hosting.imagekit.io//9db39ec188464cbe/IMG_7583.jpeg?Expires=1832279342&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=LUIKToCa~pKgUsiX3rzDwWQXZBuw5tXJyEcv5~dhCM0h~ZG08Uo21GNpnoVcPUG4~M~AI7pcQV~31mpmtQTK7UKAuk49TCNrv-FaiDowP1rIdZpoOY5qnHVVhwJ8PloSoREC6UP49JCdLXxI9hM3K3Mnooc2vqTwdNPUG5iuDjCn5OZpmA13Ztribk8YI-uXp~09dBZJRGOEW5jJ8hB7u5561HRcfMYORBWHjHiveHHVy-y226xdcbEB7fczKdwEYY72K-G4mQbB6QlT-Hj6h72kgv-mdtdzWI7s7pKGKv6teepVjcCVPztdnuTvJfA5Ihkixxg-5E-UlA3r1UH86w__" alt="2019 Honda Civic">
           </div>
           <div class="vehicle-info">
             <h2>2015 MERCEDES BENZ</h2>
