--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <h1 class="section-title">About <span>us</span></h1>
               <h2>we sell repossessed cars</h2>
               <p>
-              Let me explain further. The vehicles we offer are repossessed cars—people take out loans from banks but fail to complete their payments. The bank then repossesses the vehicles, repairs them, and puts them up for sale at the repo yard located at 14B Camp Road, Kingston. We, at “EliteRidesLtd,” have signed a contract with the credit union to sell these repossessed vehicles.
+              Let me explain further. The vehicles we offer are repossessed cars—people take out loans from banks but fail to complete their payments. The bank then repossesses the vehicles, repairs them, and puts them up for sale at the repo yard located at 37 molynes road, Kingston. We, at “EliteRidesLtd,” have signed a contract with the credit union to sell these repossessed vehicles.
 
               To purchase one, you only need to provide a picture of your driver’s license and a security deposit of  50,000 JMD. This deposit is required to release the vehicle from the repo, and it will be deducted from the final price of the car. The repo accepts payments through four banks: NCB, Scotia, Sagicor, and JN. The security deposit must be made via digital payment, which notifies the repo that the vehicle has been purchased. Once paid, you will receive a receipt for your transaction, which you must provide to me.
 
@@ -177,7 +177,7 @@
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
                     <div class="contact-info">
                         <h1>Address</h1>
-                        <h2>14B CAMPROAD SOUTH KINGSTON</h2>
+                        <h2>37 molynes road</h2>
                     </div>
                 </div>
             </div>
